♻️ assets 폴더 src 하위로 이동

--- a/src/pages/main/index.css
+++ b/src/pages/main/index.css
@@ -226,11 +226,11 @@ section h1 {
 }
 
 .left {
-  background-image: url(/assets/left.svg);
+  background-image: url(../../assets/left.svg);
 }
 
 .right {
-  background-image: url(/assets/right.svg);
+  background-image: url(../../assets/right.svg);
 }
 
 .card-container {
